--- a/Bookify/appsettings.json
+++ b/Bookify/appsettings.json
@@ -32,7 +32,7 @@
             {
                 "Name": "File",
                 "Args": {
-                    "path": "log.txt",
+                    "path": "/logs/Bookify.log",
                     "rollingInterval": "Day"
                 }
             }
@@ -49,20 +49,5 @@
             "HealthCheck": "http://smsservice-api:8080/api/Sms",
             "BaseUrl": "http://smsservice-api:8080"
         }
-    },
-    "MyServices": {
-        "MyService_1": {
-            "Login": "admin",
-            "Email": "admin@mail.com",
-            "Key": "1abd5l586cr",
-            "AccessLevel": "2"
-        },
-        "MyService_2": {
-            "Host": "127.0.0.1",
-            "Port": "1505",
-            "Password": "Pass12345"
-        }
     }
 }
-
-//        
